force-app/main/default/objects/Engagement_Rule__mdt/Engagement_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Engagement Rule</label>
    <pluralLabel>Engagement Rule</pluralLabel>
</CustomObject>