force-app/main/default/objects/Engagement_Rule__mdt/fields/Cold_After_BH_Days__c.field-meta.xml
<CustomField>
    <fullName>Cold_After_BH_Days__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Cold After BH Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>