force-app/main/default/objects/Engagement_Rule__mdt/fields/Dead_After_BH_Days__c.field-meta.xml
<CustomField>
    <fullName>Dead_After_BH_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Dead After BH Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>