force-app/main/default/objects/Engagement_Rule__mdt/fields/Escalate_After_BH_Days__c.field-meta.xml
<CustomField>
    <fullName>Escalate_After_BH_Days__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Escalate After BH Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>