force-app/main/default/objects/Engagement_Rule__mdt/fields/Specialist_Notify_On_Cold__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Notify_On_Cold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specialist Notify On Cold</label>
    <type>Checkbox</type>
</CustomField>