force-app/main/default/objects/Engagement_Rule__mdt/fields/Warm_After_BH_Days__c.field-meta.xml
<CustomField>
    <fullName>Warm_After_BH_Days__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Warm After BH Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>